--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rickshaw-browser",
-  "version": "0.0.0git28bdb736-1",
+  "version": "0.0.0git28bdb736-2",
   "description": "rickshaw npm package for browsers",
   "keywords": [
     "interactive",
@@ -21,5 +21,8 @@
   "directories": {
     "javascripts": "./js",
     "stylesheets": "./css"
+  },
+  "dependencies": {
+    "d3-browser": ">=2.9.2-1"
   }
 }
